<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gait Analyzer</string>
    <string name="title_activity_register">Registro</string>
    <string name="title_activity_log_in">Log In</string>
    <string name="title_activity_settings">Preferencias</string>
    <string name="title_activity_main">Walkthrough</string>
    <string name="action_settings">Preferencias</string>
    <string name="register_nickname_hint">Nombre de usuario</string>
    <string name="register_password1_hint">Contraseña</string>
    <string name="register_password2_hint">Conf. Contraseña</string>
    <string name="register_name_hint">Nombre</string>
    <string name="register_lastname_hint">Apellidos</string>
    <string name="register_born_title">Fecha de nacimiento</string>
    <string name="register_gender_title">Sexo</string>
    <string name="register_height_title">Altura</string>
    <string name="register_height_hint">Altura (cm)</string>
    <string name="register_leglength_hint">Longitud de pierna (cm)</string>
    <string name="register_done_title">OK</string>
    <string name="genderpicker_title">Sexo</string>
    <string name="drawer_open">Abrir menu</string>
    <string name="drawer_close">Cerrar menu</string>
    <string name="share">Compartir</string>
    <string name="share_with">Compartir usando...</string>
    
    <!-- Dialog -->
    <string name="accept_label">Aceptar</string>
    <string name="cancel_label">Cancelar</string>
    <string name="und_title">Nombre de usuario erróneo</string>
    <string name="und_message">El nombre de usuario ya esta en uso. Elija uno distinto.</string>
    <string name="pned_title">Contraseña incorrecta</string>
    <string name="pned_message">Los campos Contraseña y Conf. Contraseña deben coincidir.</string>
    <string name="cfd_title">Fallo de conexion</string>
    <string name="cfd_message">No ha sido posible conectarse al servicio web. Compruebe su conexion a internet y pruebe más tarde.</string>
    <string name="wdd_title">LogIn incorrecto</string>
    <string name="wdd_message">Nombre de usuario o contraseña incorrectos.</string>
    <string name="cdd_title">Borrar usuario</string>
    <string name="cdd_message">Si esta seguro de borrar este usuario introduzca su nombre de usuario y presione Aceptar.</string>
    <string name="icd_title">Contacto invalido</string>
    <string name="icd_message">El contacto de emergencia debe tener número de teléfono.</string>
    <string name="nrpd_title">Lista de analisis incorrecta</string>
    <string name="nrpd_message">Debe escoger al menos un tipo de análisis.</string>
    <string name="register_progress_message">Registrando datos...</string>
    <string name="login_progress_message">Identificando usuario...</string>
    <string name="delete_progress_message">Borrando usuario...</string>

    <!-- LogIN -->
    <string name="login_username_hint">Nombre de usuario</string>
    <string name="login_password_hint">Contraseña</string>
    <string name="login_login_text">Log In</string>
    <string name="login_register_text">Registrarse</string>

    <!-- Settings -->
    <string name="settings_session_title">Sesion</string>
    <string name="settings_useraccount_title">Cuenta de usuario</string>
    <string name="settings_falling_title">Detección de caidas</string>
    <string name="settings_analysis_title">Análisis</string>
    <string name="settings_delete_title">Borrar usuario</string>
    <string name="settings_logout_title">Cerrar sesión</string>
    <string name="settings_emergencycontact_title">Contacto de emergencia</string>
    <string name="settings_emergencycontact_summary">Ninguno seleccionado</string>
    <string name="settings_screen_title">Inicio/Pausa automático</string>
    <string name="settings_screen_summaryOn">El análisis se iniciará automáticamente al apagarse la pantalla y se pausará al encenderse.</string>
    <string name="settings_screen_summaryOff">El análisis se iniciará o pausará cuando el usuario lo indique.</string>

    <!-- MainActivity -->
    <string name="myactivitieslist_empty">No hay actividades.</string>
    <string name="myresultslist_empty">No hay resultados.</string>
    <string name="mainactivity_from_label">DESDE:</string>
    <string name="mainactivity_to_label">HASTA:</string>
    <string name="mainactivity_today_label">Hoy</string>
    <string name="mainactivity_beginning_label">...</string>
    <string name="mainactivity_mydata_label">MIS DATOS</string>
    <string name="newactivity_title">Nueva actividad</string>
    <string name="fallingdetection_title">Deteccion de caidas</string>
    <string name="myactivities_title">Mis actividades</string>
    <string name="myresults_title">Mis resultados</string>
    <string name="graph_title">Estadisticas</string>

    <!-- New Activity -->
    <string name="newactivity_receiver_title">RECEPTOR</string>
    <string name="newactivity_analysis_title">ANALISIS</string>
    <string name="newactivity_singleacc_title">Movil</string>
    <string name="newactivity_twoacc_title">Acelerometros en tobillos</string>
    <string name="newactivity_maxmove_title">Aceleracion maxima</string>
    <string name="newactivity_steps_title">Numero de pasos</string>

    <!-- CurrentActivity -->
    <string name="currentactivity_insertion_success">Se han almacenado nuevos resultados.</string>
    <string name="currentactivity_insertion_failed">Se ha producido un error al almacenar nuevos resultados.</string>
    <string name="currentactivity_disconnected">Se ha desconectado el receptor.</string>
    <string name="currentactivity_connect">Conectar</string>
    <string name="currentactivity_connecting">Conectando...</string>
    
    <!-- Detail Activity -->
    <string name="title_activity_detail">Actividad</string>

    <!-- Regularity -->
    <string name="rt_regularity_title">Regularidad</string>
    <string name="rt_regularity_long_title">Regularidad de paso</string>
    <string name="rt_regularity_unit"></string>
    
    <!-- Distancia de paso -->
    <string name="rt_length_title">Longitud</string>
    <string name="rt_length_long_title">Longitud media de paso</string>
    <string name="rt_length_unit">cm</string>
    
    <!-- Podometro -->
    <string name="rt_steps_title">Podómetro</string>
    <string name="rt_steps_unit">pasos</string>
    
    <!-- Velocimetro -->
    <string name="rt_speed_title">Velocidad</string>
    <string name="rt_speed_unit">m/s</string>
    
    <!-- Ritmo -->
    <string name="rt_cadence_title">Ritmo</string>
    <string name="rt_cadence_unit">pasos/minuto</string>
    
    <!-- FallingDetectionActivity -->
    <string name="title_activity_falling_detection">Deteccion de caidas</string>
    <string name="fallingdetection_changecontact">Cambiar contacto</string>
    <string name="fallingdetection_turnon">Encender</string>
    <string name="fallingdetection_turnoff">Apagar</string>
    
    <!-- FallingDetection -->
    <string name="falling_smstext">Se ha detectado una caída.</string>
    <string name="falling_notificationtitle">Caída detectada.</string>
    <string name="falling_notificationtext">Se ha detectado una caída y se ha notificado al contacto de emergencia.</string>

    <!-- Ayuda -->
    <string name="help_sa_prepared">Coloquese el teléfono en la parte inferior de la espalda. Pulse <b>Play</b> cuando esté listo.</string>
    <string name="help_ta_unstarted">Presione <b>Conectar</b> para comenzar el escaneo de los dispositivos. A continuación pulse el botón que se encuentra en el lateral de ambos dispositivos.</string>
    <string name="help_ta_prepared">Coloquese los dispositivos en la parte exterior de ambos tobillos. Pulse <b>Play</b> cuando esté listo.</string>
    <string name="help_ta_connecting">Conectando...</string>
</resources>
