<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:title="@string/settings_session_title">
    	<Preference
        	android:key="logout_pref"
        	android:title="@string/settings_logout_title" />
    </PreferenceCategory>
    
    <PreferenceCategory
        android:title="@string/settings_falling_title">
    	<Preference
        	android:key="emergencycontact_pref"
        	android:title="@string/settings_emergencycontact_title"
        	android:summary="@string/settings_emergencycontact_summary" />
    </PreferenceCategory>

    
    <PreferenceCategory
        android:title="@string/settings_useraccount_title">
    	<Preference
        	android:key="delete_pref"
        	android:title="@string/settings_delete_title" />
    </PreferenceCategory>
    
    <PreferenceCategory
        android:title="@string/settings_analysis_title">
    	<CheckBoxPreference
        	android:key="screen_pref"
        	android:title="@string/settings_screen_title"
        	android:summaryOn="@string/settings_screen_summaryOn"
        	android:summaryOff="@string/settings_screen_summaryOff"
        	android:defaultValue="true" />
    </PreferenceCategory>

</PreferenceScreen>
