<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FallingDetectionActivity" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/falling_detection_emergencycontacttitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_emergencycontact_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/falling_detection_emergencycontactname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_emergencycontact_summary"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/falling_detection_changecontact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/fallingdetection_changecontact" />
    </LinearLayout>

    <ToggleButton
        android:id="@+id/falling_detection_onoff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/linearLayout1"
        android:layout_marginBottom="30dp"
        android:text="ToggleButton"
        android:textOff="@string/fallingdetection_turnon"
        android:textOn="@string/fallingdetection_turnoff" />

</RelativeLayout>