<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- The main content view -->

    <FrameLayout
        android:id="@+id/main_content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    
    
    <!-- The navigation drawer -->
    <ScrollView
    android:background="#EDEDED"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="260dp"
    android:layout_gravity="start|bottom">
   
<LinearLayout
    android:background="#EDEDED"
    android:layout_width="260dp"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:orientation="vertical"
        android:paddingTop="6dp" >

    <LinearLayout
        android:id="@+id/drawer_newactivity_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/draweritem_padding" >

        <ImageView
            android:id="@+id/iconPauseResume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_newactivity_icon" />

        <TextView
            android:id="@+id/drawer_newactivity_text"
            style="@style/DrawerItemText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/newactivity_title"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textView8"
        style="@style/DrawerHeaderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="18dp"
        android:text="@string/mainactivity_mydata_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <View
        style="@style/Divider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="6dp"
        android:paddingRight="6dp" >

        <!-- LinearLayout
            android:id="@+id/drawer_fallingdetection_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/draweritem_padding" >

            <ImageView
                android:id="@+id/iconStop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_fallingdetection_icon" />

            <TextView
                android:id="@+id/textView2"
                style="@style/DrawerItemText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fallingdetection_title" />
        </LinearLayout >

        <View style="@style/Divider" />-->

        <LinearLayout
            android:id="@+id/drawer_myactivities_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/draweritem_padding" >

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_myobjects_icon" />

            <TextView
                android:id="@+id/textView3"
                style="@style/DrawerItemText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/myactivities_title" />
        </LinearLayout>

        <View style="@style/Divider" />

        <LinearLayout
            android:id="@+id/drawer_myresults_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/draweritem_padding" >

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_myobjects_icon" />

            <TextView
                android:id="@+id/textView4"
                style="@style/DrawerItemText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/myresults_title" />
        </LinearLayout>
        
        <View style="@style/Divider" />

        <LinearLayout
            android:id="@+id/drawer_graph_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/draweritem_padding" >

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_statistics_icon" />

            <TextView
                android:id="@+id/textView5"
                style="@style/DrawerItemText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/graph_title" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:gravity="bottom"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView7"
            style="@style/DrawerHeaderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:text="@string/mainactivity_from_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <View style="@style/Divider" />

        <TextView
            android:id="@+id/drawer_fromDate"
            style="@style/DrawerDateText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="18dp"
            android:text="@string/mainactivity_beginning_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView6"
            style="@style/DrawerHeaderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="6dp"
            android:text="@string/mainactivity_to_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <View style="@style/Divider" />

        <TextView
            android:id="@+id/drawer_toDate"
            style="@style/DrawerDateText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="18dp"
            android:text="@string/mainactivity_today_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <!-- 
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="75dp" -->
    
</LinearLayout>
</ScrollView>
</android.support.v4.widget.DrawerLayout>